// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`confirm (isCI = false) > can cancel 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m Yes [2m/[22m [2m○[22m [2mNo[22m
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[31m■[39m  foo
[90m│[39m  [9m[2mNo[22m[29m
[90m│[39m",
  "
",
  "[?25h",
]
`;

exports[`confirm (isCI = false) > can set initialValue 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m○[22m [2mYes[22m [2m/[22m [32m●[39m No
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mNo[22m",
  "
",
  "[?25h",
]
`;

exports[`confirm (isCI = false) > left arrow moves to previous choice 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m Yes [2m/[22m [2m○[22m [2mNo[22m
[36m└[39m
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "[36m│[39m  [2m○[22m [2mYes[22m [2m/[22m [32m●[39m No",
  "[2B",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "[36m│[39m  [32m●[39m Yes [2m/[22m [2m○[22m [2mNo[22m",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mYes[22m",
  "
",
  "[?25h",
]
`;

exports[`confirm (isCI = false) > renders custom active choice 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m bleep [2m/[22m [2m○[22m [2mNo[22m
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mbleep[22m",
  "
",
  "[?25h",
]
`;

exports[`confirm (isCI = false) > renders custom inactive choice 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m Yes [2m/[22m [2m○[22m [2mbleep[22m
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mYes[22m",
  "
",
  "[?25h",
]
`;

exports[`confirm (isCI = false) > renders message with choices 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m Yes [2m/[22m [2m○[22m [2mNo[22m
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mYes[22m",
  "
",
  "[?25h",
]
`;

exports[`confirm (isCI = false) > right arrow moves to next choice 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m Yes [2m/[22m [2m○[22m [2mNo[22m
[36m└[39m
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "[36m│[39m  [2m○[22m [2mYes[22m [2m/[22m [32m●[39m No",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mNo[22m",
  "
",
  "[?25h",
]
`;

exports[`confirm (isCI = true) > can cancel 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m Yes [2m/[22m [2m○[22m [2mNo[22m
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[31m■[39m  foo
[90m│[39m  [9m[2mNo[22m[29m
[90m│[39m",
  "
",
  "[?25h",
]
`;

exports[`confirm (isCI = true) > can set initialValue 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [2m○[22m [2mYes[22m [2m/[22m [32m●[39m No
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mNo[22m",
  "
",
  "[?25h",
]
`;

exports[`confirm (isCI = true) > left arrow moves to previous choice 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m Yes [2m/[22m [2m○[22m [2mNo[22m
[36m└[39m
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "[36m│[39m  [2m○[22m [2mYes[22m [2m/[22m [32m●[39m No",
  "[2B",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "[36m│[39m  [32m●[39m Yes [2m/[22m [2m○[22m [2mNo[22m",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mYes[22m",
  "
",
  "[?25h",
]
`;

exports[`confirm (isCI = true) > renders custom active choice 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m bleep [2m/[22m [2m○[22m [2mNo[22m
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mbleep[22m",
  "
",
  "[?25h",
]
`;

exports[`confirm (isCI = true) > renders custom inactive choice 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m Yes [2m/[22m [2m○[22m [2mbleep[22m
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mYes[22m",
  "
",
  "[?25h",
]
`;

exports[`confirm (isCI = true) > renders message with choices 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m Yes [2m/[22m [2m○[22m [2mNo[22m
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mYes[22m",
  "
",
  "[?25h",
]
`;

exports[`confirm (isCI = true) > right arrow moves to next choice 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [32m●[39m Yes [2m/[22m [2m○[22m [2mNo[22m
[36m└[39m
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "[36m│[39m  [2m○[22m [2mYes[22m [2m/[22m [32m●[39m No",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mNo[22m",
  "
",
  "[?25h",
]
`;
